--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
-    "@radix-ui/react-visually-hidden": "^1.1.1",
+    "@radix-ui/react-visually-hidden": "^1.2.3",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.48.1",
     "@vercel/analytics": "^1.5.0",
@@ -60,9 +60,10 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
-    "recharts": "^2.15.1",
+    "recharts": "^2.15.4",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
+    "tw-animate-css": "^1.3.3",
     "vaul": "^1.1.2",
     "zod": "^3.24.1",
     "tailwindcss-animate": "^1.0.7"
